--- a/src/map/cones2_new.yaml
+++ b/src/map/cones2_new.yaml
@@ -1,6 +1,6 @@
-image: cones.pgm
+image: cones2_new.pgm
 resolution: 0.050000
-origin: [-10.836037, -6.056982, 0.000000]
+origin: [-4.823845, -7.392453, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
